<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mlanie.mabibliotheque.BookRegistration"
    tools:showIn="@layout/activity_book_registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="@string/Book_Name"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:singleLine="true" />

        <EditText
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:id="@+id/Writing_Book_Name"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="@string/Author_Name"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Writing_Author_Name"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Writing_Author_First_Name"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="@string/Published_Year"
            android:id="@+id/textView3"
            android:layout_below="@+id/Writing_Author_Name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/Writing_Date"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="@string/Home_Edition"
            android:id="@+id/Text_View"
            android:layout_below="@+id/Writing_Date"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Writing_Home_Edition"
            android:layout_below="@+id/Text_View"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="Nombre de pages"
            android:id="@+id/Page_Number"
            android:layout_below="@+id/Writing_Home_Edition"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="Genre"
            android:id="@+id/Genre"
            android:layout_above="@+id/Writing_Page_Number"
            android:layout_toRightOf="@+id/Writing_Page_Number"
            android:layout_toEndOf="@+id/Writing_Page_Number" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/Writing_Page_Number"
            android:layout_below="@+id/Page_Number"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="Résumé"
            android:id="@+id/Summary"
            android:layout_below="@+id/Writing_Page_Number"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/Writing_The_Summary"
            android:layout_below="@+id/Summary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/Writing_Author_First_Name"
            android:layout_alignEnd="@+id/Writing_Author_First_Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="Avis"
            android:id="@+id/Your_Opinion"
            android:layout_below="@+id/Writing_The_Summary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/Writing_Your_Opinion"
            android:layout_below="@+id/Your_Opinion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerGenre"
            android:layout_alignBottom="@+id/Writing_Page_Number"
            android:layout_below="@+id/Genre"
            android:layout_alignLeft="@+id/Genre"
            android:layout_alignStart="@+id/Genre"
            android:layout_alignRight="@string/Writing_Book_Name"
            android:layout_alignEnd="@string/Writing_Book_Name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0004ff"
            android:text="Note"
            android:id="@+id/Your_Note"
            android:layout_below="@+id/Writing_Your_Opinion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_below="@+id/Your_Note"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:theme="@style/RatingBar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:text="Enregistrer"
            android:id="@+id/saveBook"
            android:layout_below="@+id/ratingBar"
            android:layout_alignLeft="@+id/spinnerGenre"
            android:layout_alignStart="@+id/spinnerGenre"
            android:onClick="saveTheBook"
            android:padding="10dp"
            android:background="@color/colorPrimary"/>


    </RelativeLayout>

    </ScrollView>
</RelativeLayout>
